--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "angular-animate": "^1.7.0",
     "angular-aria": "^1.7.0",
     "angular-material": "^1.1.9",
+    "angular-messages": "^1.7.0",
     "angular-sanitize": "^1.7.0",
     "font-awesome": "^4.7.0"
   },
