--- a/web/package.json
+++ b/web/package.json
@@ -20,19 +20,20 @@
   },
   "homepage": "https://github.com/preboot/angularjs-webpack",
   "dependencies": {
-    "angular": "^1.5.0",
-    "angular-animate": "^1.7.0",
-    "angular-aria": "^1.7.0",
+    "angular": "~1.5.0",
+    "angular-animate": "~1.5.0",
+    "angular-aria": "~1.5.0",
     "angular-material": "^1.1.9",
-    "angular-messages": "^1.7.0",
-    "angular-sanitize": "^1.7.0",
+    "angular-messages": "~1.5.0",
+    "angular-sanitize": "~1.5.0",
     "font-awesome": "^4.7.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.5.0",
+    "angular-mocks": "~1.5.0",
     "autoprefixer": "^6.0.3",
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
+    "babel-plugin-angularjs-annotate": "^0.9.0",
     "babel-preset-es2015": "^6.1.18",
     "copy-webpack-plugin": "4.0.1",
     "css-loader": "0.26.1",
